# Staccato

./: .editorconfig  .gitignore  AGENTS.md  Cargo.toml  README.md  bootstrap.ps1  bootstrap.sh  lefthook.yml
.cargo/: config.toml
building/: .rustc_info.json  Cargo.toml
building/.cargo/: config.toml
building/debug/.fingerprint/staccato-core-255e4863cf9efcb9/: lib-staccato_core  lib-staccato_core.json
building/src/: actions.rs  configuration.rs  hooks.rs  main.rs  paths.rs  platform.rs  run.rs
skills/staccato-architecture/: SKILL.md
skills/staccato-architecture/references/: architecture.md
skills/staccato-build/: SKILL.md
skills/staccato-build/references/: building.md
source/managed/: Directory.Build.props  Staccato.Managed.slnx
source/managed/Staccato.Managed/: Class1.cs
source/managed/Staccato.Managed.Core/: Class1.cs
source/native/rust/: Cargo.toml
source/native/rust/.cargo/: config.toml
source/native/rust/staccato/: Cargo.toml
source/native/rust/staccato_application/: Cargo.toml
source/native/rust/staccato_application/src/: lib.rs
source/native/rust/staccato_asset/: Cargo.toml
source/native/rust/staccato_core/: Cargo.toml
source/native/rust/staccato_core/src/: Fallible.rs  fallible.rs  frect.rs  id.rs  keycode.rs  keymod.rs  lib.rs  mouse.rs  rect.rs  scancode.rs  spatial.rs  tickable.rs  time_service.rs
source/native/rust/staccato_dotnet/: Cargo.toml
source/native/rust/staccato_hal/: Cargo.toml
source/native/rust/staccato_hal/src/: error.rs  eventloop.rs  lib.rs  sdl_event.rs  sdl_event_loop.rs  sdl_event_source.rs  wgpu_context.rs  wgpu_window.rs  window.rs
source/native/rust/staccato_layout/: Cargo.toml
source/native/rust/staccato_platform_api/: Cargo.toml
source/native/rust/staccato_platform_api/src/: lib.rs  window.rs
source/native/rust/staccato_render_api/: Cargo.toml
source/native/rust/staccato_render_wgpu/: Cargo.toml
source/native/rust/staccato_sample_playground/: Cargo.toml
source/native/rust/staccato_sample_playground/src/: main.rs
source/native/rust/staccato_shared/: Cargo.toml
source/native/rust/staccato_shared/src/: event.rs  event_dispatcher.rs  event_loop.rs  id.rs  lib.rs  ticker.rs
source/native/rust/staccato_telemetry/: Cargo.toml
source/native/rust/staccato_telemetry/src/: lib.rs
source/native/rust/staccato_text/: Cargo.toml
source/native/rust/staccato_ui/: Cargo.toml
