[package]
name = "staccato-building"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sb"
path = "src/main.rs"
test = false
bench = false

[dependencies]
eyre.workspace = true
color-eyre.workspace = true
clap.workspace = true
owo-colors.workspace = true
exit-code.workspace = true
humantime.workspace = true
xshell.workspace = true
