[package]
name = "staccato_application"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
staccato-shared.workspace = true
staccato-hal.workspace = true

[lints]
workspace = true
