[package]
name = "staccato-core"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
num-traits.workspace = true
num-derive.workspace = true
bitflags.workspace = true
