[package]
name = "staccato-hal"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
staccato-core.workspace = true
staccato-shared.workspace = true
staccato-platform-api.workspace = true

sdl3-sys.workspace = true
raw-window-handle.workspace = true
wgpu.workspace = true

eyre.workspace = true
thiserror.workspace = true

smol_str.workspace = true

num-traits.workspace = true

pollster.workspace = true

[lints]
workspace = true
