[package]
name = "staccato-platform-api"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
staccato-core.workspace = true
staccato-shared.workspace = true
raw-window-handle.workspace = true
smol_str.workspace = true

[lints]
workspace = true
