[package]
name = "staccato-sample-playground"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
staccato-telemetry.workspace = true
staccato-application.workspace = true

tracing.workspace = true

eyre.workspace = true

[lints]
workspace = true
