[package]
name = "staccato-telemetry"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tracing.workspace = true
tracing-log.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
eyre.workspace = true

[lints]
workspace = true
